--- a/09-Animaciones/Ej Nº9 animaciones/Animaciones y transiciones en CSS.css
+++ b/09-Animaciones/Ej Nº9 animaciones/Animaciones y transiciones en CSS.css
@@ -1,26 +1,49 @@
-div{
-    background-color: darkslategray;
-    min-height: 90vh;
-    align-items: center;
-    justify-content: center;
-    display: flex;
+div {
+  background-color: darkslategray;
+  min-height: 90vh;
+  align-items: center;
+  justify-content: center;
+  display: flex;
 }
 
-.btn-modern{
-    height: 70px;
-    width: 210px;
-    background-color: rgb(197, 117, 19);
-    border: none;
-    border-radius: 3px;
-    font-weight: 800;
-    font-size: xx-large;
-    color: rgb(31, 31, 31);
+.btn-modern {
+  height: 70px;
+  width: 210px;
+  background-color: rgb(197, 117, 19);
+  border: none;
+  border-radius: 3px;
+  font-weight: 800;
+  font-size: xx-large;
+  color: rgb(31, 31, 31);
 }
 .btn-modern:hover {
-    transform: translateY(-5px);
-    background-color: rgb(64, 64, 99);
-    border-radius: 5px;
-    color: darkorange;
-    transition-delay: 0.4s;
-    box-shadow: 5px 5px 3px 10px rgb(61, 61, 61);
+  transform: translateY(-5px);
+  background-color: rgb(64, 64, 99);
+  border-radius: 5px;
+  color: darkorange;
+  transition-delay: 0.4s;
+  box-shadow: 5px 5px 3px 10px rgb(61, 61, 61);
 }
+
+/* body {
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.btn-modern {
+  padding: 1rem 3rem;
+  font-size: 1.25rem;
+  border: solid 1px transparent;
+  border-radius: 50px;
+  cursor: pointer;
+  transition: all 0.4s ease;
+}
+
+.btn-modern:hover {
+  transform: translateY(-5px);
+  background-color: aqua;
+  color: white;
+  box-shadow: 0 5px 10px rgba(45, 206, 255, 0.5);
+} */
