--- a/14-15 Proyecto/Sass/components.css
+++ b/14-15 Proyecto/Sass/components.css
@@ -1,13 +1,13 @@
 .btn-main, .btn-main-s {
   padding: 0.25rem 1.5rem;
   border-radius: 0.25rem;
-  background-color: #0075FF;
+  background-color: #0075ff;
   color: white;
-  border: solid 1px #0075FF;
+  border: solid rgb(255, 102, 0);
 }
 .btn-main:hover, .btn-main-s:hover {
   background-color: white;
-  color: #0075FF;
+  color: #0075ff;
 }
 .btn-main-s {
   font-size: 0.75rem;
@@ -17,7 +17,7 @@
 .btn-sec, .btn-sec-s {
   padding: 0.25rem 1.5rem;
   border-radius: 0.25rem;
-  color: white;
+  color: #000;
   background-color: transparent;
   border: none;
 }
@@ -39,7 +39,7 @@
   margin-right: 2rem;
 }
 .main-menu li a {
-  color: white;
+  color: #000;
   text-decoration: none;
 }
 .main-menu li a:hover {
@@ -49,9 +49,9 @@
 .icon-sm i {
   font-size: 1.25rem;
   padding: 0.4rem 0.65rem;
-  color: #0075FF;
   border-radius: 50%;
-  box-shadow: 0 0 10px #00000040;
+  color: #0075ff;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3137254902);
 }
 
 .benefit {
@@ -59,7 +59,7 @@
   flex-direction: column;
 }
 .benefit i {
-  color: #0075FF;
+  color: #0075ff;
   font-size: 7.5rem;
   text-align: center;
 }
@@ -74,24 +74,24 @@
 }
 .benefit .cta {
   margin-top: 3rem;
-  color: #0075FF;
+  color: #0075ff;
   font-weight: 600;
   text-align: center;
 }
 
-.icon-desc {
+.icon-desk {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
 }
-.icon-desc i {
-  color: #0075FF;
-  font-size: 10rem;
+.icon-desk .i {
   padding: 0;
+  color: #0075ff;
+  font-size: 10rem;
 }
-.icon-desc .title {
-  margin-top: -1rem;
+.icon-desk .title {
+  margin-top: -2rem;
   font-size: 1.5rem;
   font-weight: 600;
-}
+}/*# sourceMappingURL=components.css.map */
