--- a/14-15 Proyecto/Sass/components.scss
+++ b/14-15 Proyecto/Sass/components.scss
@@ -8,110 +8,114 @@
   padding: 0.1rem 1rem;
 }
 
-//variable con color principal de los botones
-$color-main: #0075ff;
+$color-main: #0075FF;
+$color-footer: #f4f8fe;
+$background-color: #161617;
+$background-color-soft: #212121;
+$text-color: white;
+$text-color-soft: #999;
 
 .btn-main {
   @include btn-base();
   background-color: $color-main;
   color: white;
-  border: solid rgb(255, 102, 0); //*le dejo este borde para que no se mueva al hacer hover
+  border: solid 1px $color-main;
 
   &:hover {
-    background-color: white;
-    color: $color-main;
+      background-color: white;
+      color: $color-main;
   }
 
   &-s {
-    @extend .btn-main;
-    @include btn-sm-modify();
-    //* al principio cada botón sec tenia el mismo código para optimizar uso @mixin btn-sm-modify
+      @extend .btn-main;
+      @include btn-sm-modify();
   }
 }
 
 .btn-sec {
   @include btn-base();
-  color: #000;
+  color: $text-color;
   background-color: transparent;
   border: none;
 
   &:hover {
-    color: #888;
+      color: #888;
   }
+
   &-s {
-    @extend .btn-sec;
-    @include btn-sm-modify();
+      @extend .btn-sec;
+      @include btn-sm-modify();
   }
 }
 
 .main-menu {
   margin-bottom: 0;
-  
   li {
-    font-size: 0.75rem;
-    list-style: none;
-    display: inline;
-    margin-right: 2rem;
-    a{
-      color: #000;
-      text-decoration: none;
-      &:hover{
-        text-decoration: underline;
+      font-size: 0.75rem;
+      list-style: none;
+      display: inline;
+      margin-right: 2rem;
+      a {
+          color: $text-color;
+          text-decoration: none;
+
+          &:hover {
+              text-decoration: underline;
+          }
       }
-    }
   }
 }
 
 .icon-sm {
   i {
-    font-size: 1.25rem;
-    padding: 0.4rem 00.65rem;
-    // border: 1px solid black;  // el color se uso para ver la forma y luego crear la sombra.
-    border-radius: 50%;
-    color: $color-main;
-    box-shadow: 0 0 10px #00000050; //0 de desplazamiento de x 0 de y -- 10px de tamaño -- color negro con 50 de transparencia
+      font-size: 1.25rem;
+      padding: 0.4rem 0.65rem;// border: 1px solid black;  // el color se uso para ver la forma y luego crear la sombra.
+      color: $color-main;
+      border-radius: 50%;
+      box-shadow: 0 0 10px #00000040;//0 de desplazamiento de x 0 de y -- 10px de tamaño -- color negro con 50 de transparencia
   }
 }
 
-.feature {
+.benefit {
   display: flex;
   flex-direction: column;
-  .icon {
-    color: $color-main;
-    font-size: 10rem;
-    text-align: center;
+  i {
+      color: $color-main;
+      font-size: 7.5rem;
+      text-align: center;
   }
   .description {
-    .title {
-      font-size: 2rem;
+      .title {
+          font-size: 2rem;
+          text-align: center;
+      }
+      .text {
+          color: #888;
+          font-weight: 600;
       text-align: center;
-    }
-    .text {
-      color: #888;
-      font-weight: 600;
-      text-align: center;
-    }
+  }
   }
   .cta {
-    color: $color-main;
-    font-weight: 600;
-    margin-top: 3rem;
-    text-align: center;
+      margin-top: 3rem;
+      color: $color-main;
+      font-weight: 600;
+      text-align: center;
   }
 }
-.icon-desk {
+
+.icon-desc {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  .icon {
-    padding: 0;
-    color: $color-main;
-    font-size: 10rem;
+  i {
+      color: $color-main;
+      font-size: 10rem;
+      padding: 0;
   }
   .title {
-    margin-top: -2rem;  //* margen negativo
-    font-size: 1.5rem;
-    font-weight: 600;
+      margin-top: -1rem;
+      font-size: 1.5rem;
+      font-weight: 600;
   }
 }
